home-cluster/unifi/unpoller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unpoller
  namespace: unifi
  labels:
    app: unpoller
spec:
  selector:
    app: unpoller
  ports:
  - name: metrics
    port: 9130
    targetPort: metrics
  type: ClusterIP
